--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.1.1",
+    "alchemy-sdk": "^3.5.2",
     "clsx": "^2.1.0",
     "lucide-react": "^0.475.0",
     "next": "14.1.0",
