--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@heroicons/react": "^2.1.1",
     "alchemy-sdk": "^3.5.2",
     "clsx": "^2.1.0",
+    "framer-motion": "^12.4.1",
     "lucide-react": "^0.475.0",
     "next": "14.1.0",
     "react": "^18.2.0",
